Closed Bug 1264497 Opened 8 years ago Closed 8 years ago

[Netflix] error F7363-3322-160F42C8: Device Binding Error (Adobe) with Firefox 47+ on Windows 10

Categories

(Core :: Audio/Video: Playback, defect, P2)

48 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla49
Tracking Status
firefox46 --- unaffected
firefox47 --- verified
firefox48 --- verified
firefox49 --- verified

People

(Reporter: roberta591, Assigned: cpearce)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:48.0) Gecko/20100101 Firefox/48.0
Build ID: 20160413030239

Steps to reproduce:

Firefox Nightly is up to date. Tried a different browser and Netflix works. This happened recently and was working now I get same error when I click to play selection. This problem is on two different computers that worked before. Error code is  F7363-3322-160F42C8. Both Firefox Nightly are up to date. I have changed nothing.


Actual results:

I get a message that an error occurred

error code:  F7363-3322-160F42C8


Expected results:

I should be watching the selection.
Please fix again - thank you
Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core
F7363-3322 is a "device binding error". Did you copy your Firefox profile between computers or hard drives?

You can probably fix this by clearing the Adobe Primetime plugin's storage associated with Netflix.com.

To do this:
1. Open Firefox.
2. Press CTRL+H to open the History pane.
3. Enter "netflix" in the search box. Links to Netflix.com should appear in the search results pane.
4. Right click on one of the "Netflix.com" results.
5. Select "forget about this site".

Then enter "netflix.com" into the URL bar, relogin to netflix, and play a video. Let me know if this doesn't work.
Priority: -- → P2
Netflix reports a spike in error F7363-3322-160F42C8 ("Device Binding Error") with Firefox 47+ on Windows 10.
Summary: Netflix gives error F7363-3322-160F42C8 again → [Netflix] error F7363-3322-160F42C8: Device Binding Error (Adobe) with Firefox 47+ on Windows 10
Oh oops. I removed the call to GMPSetNodeId when I landed Widevine support.
Comment on attachment 8749507 [details]
MozReview Request: Bug 1264497 - Call GMPSetNodeId in GMPLoader. r?gerald

https://reviewboard.mozilla.org/r/51017/#review47677
Attachment #8749507 - Flags: review?(gsquelart) → review+
https://hg.mozilla.org/mozilla-central/rev/7c71d376dfac
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Firefox Beta users who have ran into this issue and cleared their GMP storage to resolve this issue will encounter this issue again when we fix it. We'll need to clear GMP storage in builds with this fix in order to prevent such users having their Netflix break *again*.
Filed Bug 1270968 for this. It'll need to be uplift too.
Flags: needinfo?(cpearce)
Assignee: nobody → cpearce
Flags: needinfo?(cpearce)
Comment on attachment 8749507 [details]
MozReview Request: Bug 1264497 - Call GMPSetNodeId in GMPLoader. r?gerald

Requesting uplift to 47 and 48.

Approval Request Comment
[Feature/regressing bug #]: Widevine EME
[User impact if declined]: Netflix won't work if it's been run before
[Describe test coverage new/current, TreeHerder]: We have lots of EME mochitest, and we have, and I'm going to add a test to cover this specific case
[Risks and why]: Low; just restores previous behaviour accidentally removed when I landed Widevine EME.
[String/UUID change made/needed]: None.
Attachment #8749507 - Flags: approval-mozilla-beta?
Attachment #8749507 - Flags: approval-mozilla-aurora?
Added bug 1271169 to add unit test for node Id generation/passing to CDM.
Hello Robert, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(roberta591)
Comment on attachment 8749507 [details]
MozReview Request: Bug 1264497 - Call GMPSetNodeId in GMPLoader. r?gerald

P1 recent regression, Aurora48+, Beta47+
Attachment #8749507 - Flags: approval-mozilla-beta?
Attachment #8749507 - Flags: approval-mozilla-beta+
Attachment #8749507 - Flags: approval-mozilla-aurora?
Attachment #8749507 - Flags: approval-mozilla-aurora+
Hi Ryan, I was a bit surprised that we did not catch this regression in our testing on Nightly (Widevine CDM)? Could we add this as a scenario to our Media EME test plan? Netflix playback (not on a fresh profile) broke on win10 since Fx47 landed.
Flags: needinfo?(ryanvm)
Flags: needinfo?(ryanvm) → needinfo?(brindusa.tot)
I think the reason this slipped past QA was it required persistent profile data to repro; it only affected Firefox profiles used on Netflix with Firefox versions before and then after the bug. If QA was creating a clean profile every time they did a test, they'd have missed this. 

We also had automated tests which ensure Netflix keep working, and they identified this problem, but unfortunately this bug coincided with the person responsible for said tests leaving and the hard drive on the test machine filling up causing them to fail anyway. So the failing tests didn't get acted on. :(

We're taking steps to rectify our automated Netflix tests.
Mozilla/5.0 (Windows NT 10.0; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0 Build ID: 20160511030221

I can confirm the issue is no longer reproducible on Firefox Nightly 49.0a1 and Aurora 48.0a2 on Windows 7 and Windows 10. 

The issue was reproduced by running a Netflix video on Nightly 47 (where the video properly plays) then on Nightly 48 (the video does not play and the error is displayed).  If the video is not previously played on a previous Nightly version and the video is played directly on Nightly 48 then the issue is not reproducible (the reason why we did not catch it while testing Widevine feature).

Tomorrow, we'll continue the verification on Beta.
Flags: needinfo?(brindusa.tot)
Verified as fixed on Beta build: 47.0b4, Build ID - 20160509171155 on Windows 7 and Windows 10.
Status: RESOLVED → VERIFIED
Flags: needinfo?(roberta591)
(In reply to Chris Pearce (:cpearce) from comment #18)
> I think the reason this slipped past QA was it required persistent profile
> data to repro; it only affected Firefox profiles used on Netflix with
> Firefox versions before and then after the bug. If QA was creating a clean
> profile every time they did a test, they'd have missed this. 
> 
> We also had automated tests which ensure Netflix keep working, and they
> identified this problem, but unfortunately this bug coincided with the
> person responsible for said tests leaving and the hard drive on the test
> machine filling up causing them to fail anyway. So the failing tests didn't
> get acted on. :(
> 
> We're taking steps to rectify our automated Netflix tests.

Thanks Chris! For scenarios like this (given the severe end-user impact), it doesn't hurt to have overlapping test coverage i.e. both automated tests and manual testing by QA
You need to log in before you can comment on or make changes to this bug.