Bug 1264497 - Call GMPSetNodeId in GMPLoader. r=gerald,a=ritu

MozReview-Commit-ID: I6BApLKpjPS

--HG--
extra : source : 7c71d376dfac6280c520b09acf3acba01da33bbc